...
        />
    <item
        android:id="@+id/analytics"
        android:icon="@drawable/ic_graph"
        android:title="@string/Analytics" />
    <item
        android:id="@+id/tracking"
        android:icon="@drawable/ic_pencil"
        android:title="@string/tracking" />
</menu>
